--- a/SPL3/server/pom.xml
+++ b/SPL3/server/pom.xml
@@ -12,4 +12,20 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
     <name>server</name>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <mainClass>${exec.mainClass}</mainClass>
+                    <arguments>
+                        <argument>${exec.args}</argument>
+                    </arguments>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
